Reload POMs that have changed during dev mode
(cherry picked from commit 236c646cdfd1ef7ce23604e45cd71e702df62ddf)